[gd_scene load_steps=7 format=2]

[ext_resource path="res://PlayerCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Path2D.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Area2D.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 728, -199.7, 93.9066, 199.7, -93.9066, 219, 604, -35.6608, -59.4346, 35.6608, 59.4346, 489, 558, -68.9441, 80.831, 68.9441, -80.831, 1069, 573, -98.6614, 115.303, 98.6614, -115.303, 1130, 371, -47.5477, 89.1519, 47.5477, -89.1519, 987, 211, 0, 0, 0, 0, 996, 64 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 68.25, 56 )

[node name="Node2D" type="Node2D"]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="Lvl1Path" type="PathFollow2D" parent="Path2D"]
position = Vector2( 256, 728 )
rotation = -3.00073
loop = false

[node name="Area2D" parent="Path2D/Lvl1Path" instance=ExtResource( 1 )]
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 564, 578 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Area2D"]
margin_left = -33.0
margin_top = -28.0
margin_right = 31.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Path2D/Lvl1Path/Area2D" to="Path2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Path2D/Lvl1Path/Area2D" to="Path2D" method="_on_Area2D_area_exited"]
[connection signal="pressed" from="Area2D/Button" to="Area2D" method="_on_Button_pressed"]
